# veriti

./: .gitignore  README.md
.github/workflows/: pipeline.yml  test.yml
hw-drivers/: Orbit.toml  README.md  casting.vhd
hw-drivers/vhdl/: casting.vhd  veriti.vhd
raw-data/: README.md  example1.trace
sw-drivers/: README.md
sw-drivers/python/: pyproject.toml
sw-drivers/python/src/veriti/: __init__.py  __main__.py  cast.py  config.py  coverage.py  lib.py  log.py  main.py  model.py  prelude.py  trace.py
tests/: README.md
tests/t1/: t1.vhd  t1_tb.py  t1_tb.vhd
tests/t2/: hamming.py  parity.vhd  parity_if.json  parity_tb.py  parity_tb.vhd
tests/t3/: add.vhd  add_if.json  add_tb.py  add_tb.vhd
tests/t4/: bcd_enc.vhd  bcd_enc_tb.py  bcd_enc_tb.vhd  math.vhd  standard.vhd
tests/t5/: timer.vhd  timer_tb.py  timer_tb.vhd
